<resources>
    <string name="app_name">myDictProject</string>
    <string name="createAkkaunt">Создайте аккаунт!</string>
    <string name="sign_in_toAkkaunt">Войдите в аккаунт!</string>
    <string name="sign_in">Войти</string>
    <string name="create">Создать</string>
    <string name="avtorize">Авторизоваться</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="NeVsePolyaZapolneni">Не все поля заполнены</string>
    <string name="added">добавлен</string>
    <string name="avtorized">авторизован</string>
    <string name="words">Слова</string>
    <string name="back">Назад</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>