<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".AuthActivity">

    <TextView
        style="@style/LoginTitleStyle"
        android:text="@string/sign_in_toAkkaunt"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         />

    <EditText
        android:id="@+id/user_login_auth"
        style="@style/LoginEditStyle"
        android:ems="10"
        android:hint="login"
         />

    <EditText
        android:id="@+id/user_pass_auth"
        style="@style/LoginEditStyle"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
         />

    <Button
        android:id="@+id/button_auth"
        android:text="@string/sign_in"
        style="@style/LoginButtonStyle" />

    <TextView
        android:id="@+id/link_to_reg"
        style="@style/TextAvtorizeStyle"
        android:clickable="true"
        android:text="@string/sign_up"
        />

</LinearLayout>