<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/createAkkaunt"
        tools:ignore="TextSizeCheck"
        style="@style/LoginTitleStyle" />

    <EditText
        android:id="@+id/user_login"
        style="@style/LoginEditStyle"
        android:ems="10"
        android:hint="login"
         />

    <EditText
        android:id="@+id/user_email"
        android:hint="email"
        style="@style/LoginEditStyle" />

    <EditText
        android:id="@+id/user_pass"

        android:ems="10"
        android:hint="password"
        style="@style/LoginEditStyle"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/button_reg"
        style="@style/LoginButtonStyle"
        android:text="@string/create"
        />

    <TextView
        android:id="@+id/link_to_auth"
        android:text="@string/avtorize"
        style="@style/TextAvtorizeStyle" />

</LinearLayout>